# Interest_tools

./: .gitignore  README.md  update_readme_prompt.txt
ChatRoom/: .env  .gitignore  README.md
agent_eval/: INTEGRATION_GUIDE.md  LANGGRAPH_GUIDE.md  OPTIMIZATION_SUMMARY.md  README.md  README_CN.md  evaluations.json  langgraph_evaluations.json  pyproject.toml  setup.py  test_context.py  test_ngram_similarity.py
agent_eval/agent_eval/: __init__.py  core.py  decorators.py  generators.py  metrics.py  models.py  recorders.py  reporting.py  scorers.py  storages.py  text_similarity.py  tracker.py
agent_eval/agent_eval/integrations/: __init__.py  langchain_integration.py  langgraph_integration.py
agent_eval/data/: decorator_evaluations.json
agent_eval/docs/: ARCHITECTURE.md  INTEGRATION_GUIDE.md  INTEGRATION_GUIDE_CN.md  LANGCHAIN_LANGGRAPH_INTEGRATION.md  METRICS_GUIDE.md
agent_eval/examples/: __init__.py  basic_usage.py  decorator_example.py  easy_integration_demo.py  ideal_answer_example.py  langchain_langgraph_example.py  langgraph_integration.py  llm_judge_example.py  ngram_similarity_example.py  simple_demo.py
agent_eval/examples/data/: test.json
agent_eval/reports/: comparison_report.json
agent_eval/tests/: __init__.py  test_core.py  test_metrics.py  test_recorders.py  test_storages.py
dispatch_center_asyncio/: .gitignore  README.md  requirements.txt  start.py
dispatch_center_process/: .env.example  .gitignore  README.md  requirements.txt  start.py  test_multi_process.py
dispatch_center_thteading/: .env.example  .gitignore  README.md  requirements.txt  start.py
fastapi-nacos/: main.py  nacos_client.py  requirements.txt
fastapi_SseAndStreamable/: readme.md
kg_from_unstructure_text/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  start.sh
large_model_eval/: DESIGN.md  README.md  config.yaml  (+4 more)
(+221 files in other folders)
