[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-eval"
version = "0.1.0"
description = "A comprehensive evaluation system for AI agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Agent Eval Team"}
]
keywords = ["agent", "evaluation", "llm", "ai", "metrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "aiohttp>=3.8.0",
    "asyncio",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0", "sqlalchemy>=2.0.0"]
all = ["psycopg2-binary>=2.9.0", "sqlalchemy>=2.0.0", "pandas>=2.0.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "black>=23.0.0", "mypy>=1.0.0", "isort>=5.12.0"]

[project.urls]
Homepage = "https://github.com/yourusername/agent-eval"
Repository = "https://github.com/yourusername/agent-eval"
Issues = "https://github.com/yourusername/agent-eval/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_eval*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
